# Federated-Learning-for-IoT-Intrusion-Detection

./: .gitignore  README.md  notes.md  pyproject.toml  run_tensorboard.sh  setup.sh
fliir/: client_app.py  server_app.py  single_worker_app.py  task_fliir.py
