[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Federated-Learning-for-IoT-Intrusion-Detection"
version = "1.0.0"
description = "Federated Learning for IoT Intrusion Detection"
license = "Apache-2.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "flwr[simulation]>=1.15.2",
    "flwr-datasets[vision]>=0.5.0",
    "scikit-learn==1.3.0",
    "numpy==1.26.0"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "fliir.server_app:app"
clientapp = "fliir.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
max-epochs = 1
num-channels = 1
num-classes = 4
learning-rate = 0.0779591

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 4
